implement the left side page view

--- a/index.html
+++ b/index.html
@@ -180,7 +180,26 @@
                 
             </nav>
             <main class="whats-view">
-
+                  <div class="view-cntent">
+                    <div class="view">
+                        <img src="img/left_img.jpg" alt="left image" class="view-img">
+                    </div>
+                    <div class="view-description">
+                        <h2 class="view-description-title">Mantenha o seu telemóvel ligado ao à internet</h2>
+                        <p class="view-description-paragraph">
+                            O WhatsApp liga-se ao seu telemóvel para sincronizar as mensagens. Para reduzir o consumo de dados móveis, certifique-se de que o seu telemóvel está ligado a uma rede Wi-Fi.
+                        </p>
+                    </div>
+                    <div class="view-download">
+                       <span class="view-download-img">
+                            <img src="img/laptop.svg" alt="Desktop App">
+                       </span>
+                        <span class="view-download-text">
+                            O WhatsApp está disponível para Windows. 
+                            <a href="#" class="view-download-link">Descarregar</a>.
+                        </span>
+                    </div>
+                  </div>
             </main>
         </div>
         <script src="" async defer></script>
