--- a/index.html
+++ b/index.html
@@ -15,15 +15,17 @@
                 <header class="user-header">
                     <div class="user-header__state">
                         <img src="img/user1.jpg" alt="" class="user-img">
-                        <span class="item">
-                            A
-                        </span>
-                        <span class="item">
-                            B
-                        </span>
-                        <span class="item">
-                            C
-                        </span>
+                       <div class="user-sts">
+                        <button class="item">
+                            <img src="img/state.svg" alt="">
+                        </buttons>
+                        <button class="item">
+                            <img src="img/msg.svg" alt="">
+                        </button>
+                        <button class="item">
+                            <img src="img/more.svg" alt="">
+                        </button>
+                       </div>
                     </div>
                 </header>
                 <div class="search">
