fix user search bar

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <div class="contacts">
                     <div class="contact">
                         <div class="contact-img">
-                            <img src="img/user1.jpg" alt="User 1" class="user-img">
+                            <img src="img/user2.png" alt="User 1" class="user-img">
                         </div>
                         <div class="contact-content">
                             <div class="contact-content-info">
@@ -59,7 +59,7 @@
                     </div>
                     <div class="contact">
                         <div class="contact-img">
-                            <img src="img/user1.jpg" alt="User 1" class="user-img">
+                            <img src="img/user3.jpg" alt="User 1" class="user-img">
                         </div>
                         <div class="contact-content">
                             <div class="contact-content-info">
@@ -79,12 +79,12 @@
                     </div>
                     <div class="contact">
                         <div class="contact-img">
-                            <img src="img/user1.jpg" alt="User 1" class="user-img">
+                            <img src="img/user4.jpg" alt="User 1" class="user-img">
                         </div>
                         <div class="contact-content">
                             <div class="contact-content-info">
                                 <span class="contact-id">Mario Joao</span>
-                                <span class="contact-when"> ontem</span>
+                                <span class="contact-when"> 02/03/21</span>
                             </div>
                             <div class="contact-content-msg">
                                 <div class="msg-cnt">
@@ -97,26 +97,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="contact">
-                        <div class="contact-img">
-                            <img src="img/user1.jpg" alt="User 1" class="user-img">
-                        </div>
-                        <div class="contact-content">
-                            <div class="contact-content-info">
-                                <span class="contact-id">Mario Joao</span>
-                                <span class="contact-when"> ontem</span>
-                            </div>
-                            <div class="contact-content-msg">
-                                <div class="msg-cnt">
-                                    <img src="img/seen.svg" alt="">
-                                    <span class="msg">Dependo da G(a funcao geradora)...</span>
-                                </div>
-                                <span>
-                                    <img src="img/muted.svg" alt="">
-                                </span>
-                            </div>
-                        </div>
-                    </div>
+                    
                     <div class="contact">
                         <div class="contact-img">
                             <img src="img/user1.jpg" alt="User 1" class="user-img">
