--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                         <div class="contact-content">
                             <div class="contact-content-info">
                                 <span class="contact-id">Mario Joao</span>
-                                <span class="contact-when"> ontem</span>
+                                <span class="contact-when"> Terça</span>
                             </div>
                             <div class="contact-content-msg">
                                 <div class="msg-cnt">
@@ -84,7 +84,7 @@
                         <div class="contact-content">
                             <div class="contact-content-info">
                                 <span class="contact-id">Mario Joao</span>
-                                <span class="contact-when"> 02/03/21</span>
+                                <span class="contact-when"> Segunda</span>
                             </div>
                             <div class="contact-content-msg">
                                 <div class="msg-cnt">
@@ -100,12 +100,12 @@
                     
                     <div class="contact">
                         <div class="contact-img">
-                            <img src="img/user1.jpg" alt="User 1" class="user-img">
+                            <img src="img/user2.png" alt="User 1" class="user-img">
                         </div>
                         <div class="contact-content">
                             <div class="contact-content-info">
                                 <span class="contact-id">Mario Joao</span>
-                                <span class="contact-when"> ontem</span>
+                                <span class="contact-when"> Domingo</span>
                             </div>
                             <div class="contact-content-msg">
                                 <div class="msg-cnt">
